--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@noopejs/rgen",
-    "version": "1.1.3",
+    "version": "1.1.4",
     "private": false,
     "license": "MIT",
     "type": "module",
@@ -33,6 +33,9 @@
         "commander": "^10.0.0",
         "fs-extra": "^11.1.0",
         "ora": "^6.1.2"
+    },
+    "devDependencies": {
+        "terser": "^5.16.5"
     },
     "preferGlobal": true
 }
