--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@noopejs/rgen",
-    "version": "1.1.4",
+    "version": "1.1.5",
     "private": false,
     "license": "MIT",
     "type": "module",
@@ -32,10 +32,8 @@
         "colors": "^1.4.0",
         "commander": "^10.0.0",
         "fs-extra": "^11.1.0",
+        "terser": "^5.16.5",
         "ora": "^6.1.2"
-    },
-    "devDependencies": {
-        "terser": "^5.16.5"
     },
     "preferGlobal": true
 }
